# pyfastx

./: .appveyor.yml  .coverage  .gitignore  .readthedocs.yaml  .readthedocs.yml  .travis.yml  LICENSE  MANIFEST.in  README.md  README.rst  __.appveyor.yml  __.travis.yml  __test.fa.gz.db  a.out  build_index.db  idex.idx  index.db  indexed_gzip.pyx  pyfastx.c  pyfastxcli.py  pyproject.toml  setup.py  test.c  test.fa  test.fa.fxi  test.fa.gz.db  test.py  test1.py  test2.py  test_fq.py  ttt.appveyor.yml  zran.c  zran.pxd
benchmark/: Figure_for_build_index.R  Figure_for_random_access.R  Figure_for_sequence_iteration.R  Plots.R  README.md  benchmark_build_index.sh  benchmark_fasta_build_index.sh  benchmark_fasta_extract_subsequences.sh  benchmark_fasta_random_access.sh  benchmark_fasta_sequence_iterate.sh  benchmark_fastq_build_index.sh  benchmark_fastq_random_access.sh  benchmark_fastq_sequence_iterate.sh  benchmark_random_access.sh  benchmark_reverse_complement.sh  bioperl_fasta_build_index.pl  bioperl_fasta_extract_subsequences.pl  bioperl_fasta_random_access.pl  bioperl_fasta_reverse_complement.pl  bioperl_fasta_sequence_iterate.pl  bioperl_fastq_build_index.pl  bioperl_fastq_random_access.pl  bioperl_fastq_sequence_iterate.pl  biopython_fasta_build_index.py  biopython_fasta_extract_subsequences.py  biopython_fasta_random_access.py  biopython_fasta_reverse_complement.py  biopython_fasta_sequence_iterate.py  biopython_fastq_build_index.py  biopython_fastq_random_access.py  biopython_fastq_sequence_iterate_with_qualityio.py  biopython_fastq_sequence_iterate_with_seqio.py  (+41 more)
(+98 files in other folders)
