[build-system]
requires = [
	"setuptools>=70.0.0",
	"setuptools-scm"
]

build-backend = "setuptools.build_meta"

[project]
name = "pyfastx"
dynamic = ["version"]
description = "Fast random access to sequences from plain and gzipped FASTA/Q files"
readme = "README.rst"
requires-python = ">= 3.8"
authors = [{name = "Lianming Du", email = "adullb@qq.com"}]
license = "MIT"
keywords = ["fasta", "fastq", "sequence", "genome", "bioinformatics"]
classifiers = [
	"Development Status :: 5 - Production/Stable",
	"Intended Audience :: Developers",
	"Intended Audience :: Education",
	"Intended Audience :: Science/Research",
	"Natural Language :: English",
	"Programming Language :: C",
	"Programming Language :: Python :: 3.8",
	"Programming Language :: Python :: 3.9",
	"Programming Language :: Python :: 3.10",
	"Programming Language :: Python :: 3.11",
	"Programming Language :: Python :: 3.12",
	"Programming Language :: Python :: 3.13",
	"Programming Language :: Python :: 3.14",
	"Operating System :: Microsoft :: Windows",
	"Operating System :: POSIX :: Linux",
	"Operating System :: Unix",
	"Topic :: Scientific/Engineering :: Bio-Informatics"
]

[tool.setuptools_scm]

[tool.setuptools]
py-modules = ["pyfastxcli"]

[project.urls]
Homepage = "https://github.com/lmdu/pyfastx"
Documentation = "https://pyfastx.readthedocs.io"

[project.scripts]
pyfastx = "pyfastxcli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
